* Add link to customer screen from invoice entry
* Add option to search by customer/vendor name on payments search
* Command line application for administrative tasks (bin/ledgersmb-admin)
* Emailed documents are added to the database as attachments
* Orders and invoices show change history
* Login pages show a warning when using an unsupported/obsolete browser

Changed functionalities
* Improved error reporting on Print button with template evaluation failure
* Faster HTML response generation (optimized HTML preprocessing)
* `demo_with_images` document template set merged with standard `demo` set
* JavaScript now built using WebPack (no longer using Dojo's build only)
* Report filters and account settings hide GIFI when not configured
* Invoice 'Save Info' now saves changes to 'Salesperson'
* Add option to report opening or closing balance on balance sheet
* Chart of Accounts examples converted to XML (from SQL)
* Emailed invoices use data from the database instead of the screen
* No longer show "Print and Save (as new)" buttons when no printers configured
* Migrated to new test driver Yath (Test2::Harness), from `prove`
* Script `bin/drop-roles` replaced by `bin/ledgersmb-admin destroy` command
* Add `samesite` policy to the authentication cookie for modern browser support

Removed functionalities
* Configuration setting 'Only Timeout Locks' removed

Bugs fixed
* Clicking 'Update' no longer clobbers saved invoices and transactions
* Optimize listing of configured currencies (don't check in-use)
* Optimize balance sheet report (use balance snapshots from period closing)
* Fixed mailing of aging reports (regression since 1.3.42)
* Default CoA referential integrity and consistency
* Templates in setup.pl appearing in changing, random order
* Fix type problems due to BigFloat being downgraded to BigInt
* Parts search filter screen needs better layout
* Value selection on non-required select can be undone by selecting empty item